--- a/Page_connexion.html
+++ b/Page_connexion.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page de connexion</title>
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="test.css">
 </head>
 <body>
     <div class="container">
-        <img src="image/log.png" class="three-image" alt=""> 
+        <div class="images">
+            <img src="image/log.png" class="three-image" alt="Log Image"> 
+            <img src="image/etudiant.png" class="right-image" alt="Etudiant Image">
+        </div>
         <h1>Welcome</h1>
         <form action="#">
             <div class="form-group">
@@ -20,10 +22,9 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <a href="#">Forgot Password?</a> 
+            <a href="#">Forgot Password?</a>
             <br> 
             <button type="submit">Login</button>
-            <img src="image/etudiant.png" class="right-image" alt="">   
         </form>
     </div>
 </body>
